--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@
     0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   --main-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-   
+
   /* --primary-brand: #4D5AE5; IRIS
 --dark:#2E2F42; NAVY BLUE
 --success:#31D0AA;*GREEN
@@ -49,10 +49,17 @@ body {
   font-size: 16px;
   letter-spacing: 0.02em;
 }
-.list {
-  list-style: none;
+h1,
+h2,
+h3,
+h4,
+p,
+ul {
   margin: 0;
   padding: 0;
+}
+.list {
+  list-style: none;
 }
 .link {
   text-decoration: none;
@@ -66,10 +73,18 @@ body {
 
   /* outline: 2px solid red;; */
 }
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.section-no-pudding {
+  padding-top: 0;
+  padding-bottom: 91px;
+}
 
 /* ___________________HEADER____________________ */
 .header {
-  box-shadow:var(--main-shadow)
+  box-shadow: var(--main-shadow);
 }
 .logo {
   display: block;
@@ -88,7 +103,7 @@ body {
 }
 /* ____________________NAV_____________________ */
 .nav {
-  display: flex ;
+  display: flex;
   align-items: center;
 }
 .nav-list {
@@ -96,10 +111,12 @@ body {
   margin-left: 77px;
 }
 .contact-list {
-  display:flex;
+  display: flex;
   margin-left: auto;
 }
-.nav-link, .contact-link, .logo {
+.nav-link,
+.contact-link,
+.logo {
   padding-top: 24px;
   padding-bottom: 24px;
 }
@@ -109,7 +126,7 @@ body {
 }
 .nav-link {
   display: block;
- 
+
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -143,8 +160,11 @@ body {
   padding-bottom: 192px;
 }
 .hero-title {
-  margin-top: 0;
   margin-bottom: 48px;
+  max-width: 492px;
+  margin-right: auto;
+  margin-left: auto;
+
 
   color: var(--color-hero-title);
   font-weight: 700;
@@ -178,18 +198,10 @@ body {
   background-color: var(--color-accent-active);
 }
 
-/*__________________Section-2________________________*/
-.section {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-.section-no-pudding {
-  padding-top: 0;
-  padding-bottom: 91px;
-}
+/*__________________FEATURES________________________*/
+
 
 .section-title {
-  margin: 0;
   margin-bottom: 72px;
 
   font-size: 36px;
@@ -201,7 +213,6 @@ body {
 .feature-title,
 .employee-name,
 .project-name {
-  margin-top: 0;
   margin-bottom: 8px;
 
   font-size: 20px;
@@ -213,11 +224,10 @@ body {
 .work-position,
 .project-type {
   line-height: 1.5;
-  margin-top: 0;
   margin-bottom: 0;
 }
 .feature-list {
-  display:flex;
+  display: flex;
 }
 .feature-list-item:not(:last-child) {
   margin-right: 24px;
@@ -241,13 +251,9 @@ body {
 }
 /*_____________________________OUR TEAM_____________________________*/
 
-.section-team {
+.team-bg {
   background-color: var(--color-bg-secondary);
 }
-.employee-list {
-  margin: 0;
-}
-
 .employee-list-item {
   background-color: var(--color-background-primary);
   margin-left: 24px;
@@ -269,7 +275,6 @@ body {
   margin-top: 48px;
   margin-left: 24px;
 }
-
 .employee-photo img {
   display: block;
   max-width: 100%;
@@ -290,13 +295,11 @@ body {
   display: inline-block;
   padding-top: 0;
   padding-bottom: 16px;
-  
 
   color: var(--color-logo-secondary);
   line-height: 1.16;
 }
 .footer-text {
-  margin: 0;
   width: 264px;
   color: var(--color-text-footer);
   line-height: 1.5;
@@ -335,7 +338,7 @@ body {
 
   box-shadow: var(--filer-btn-hover-shadow);
 }
-.filter-list-item + .filter-list-item  {
+.filter-list-item + .filter-list-item {
   margin-left: 24px;
 }
 
@@ -350,23 +353,22 @@ body {
   margin-top: 48px;
   margin-left: 24px;
 
-  background-color:var(--color-background-primary)
+  background-color: var(--color-background-primary);
 }
 .project-card {
-  border: 0.5px var(--color-bg-secondary);
   box-shadow: var(--card-shadow);
 }
-
 .card-thumb img {
   display: block;
   max-width: 100%;
   height: auto;
 }
-
 .card-content {
-  margin-top: 32px;
+  padding-top: 32px;
   padding-bottom: 32px;
   padding-left: 16px;
+
+  border: 0.5px solid var(--color-portfolio-button);
 }
 .project-name {
   text-decoration: none;
@@ -378,8 +380,3 @@ body {
   padding-top: 96px;
   padding-bottom: 120px;
 }
-/* .section-team{
-  background-color: yellow;
-}
-.work {background-color: green;}
-.features {background-color: blueviolet;} */
