--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,9 @@ ul {
   margin: 0;
   padding: 0;
 }
+img{
+  display: block;
+}
 .list {
   list-style: none;
 }
@@ -246,9 +249,7 @@ ul {
 .project-list-item:not(:last-child) {
   margin-right: 24px;
 }
-.work-item img {
-  display: block;
-}
+
 /*_____________________________OUR TEAM_____________________________*/
 
 .team-bg {
@@ -359,10 +360,8 @@ ul {
 .project-card {
   display: block;
   box-shadow: var(--card-shadow);
-
 }
 .card-thumb img {
-  display: block;
   max-width: 100%;
   height: auto;
 }
